--- a/ProyectosPrueba/ProyectoPrueba1/app/src/main/res/layout/activity_inicio_registro.xml
+++ b/ProyectosPrueba/ProyectoPrueba1/app/src/main/res/layout/activity_inicio_registro.xml
@@ -7,7 +7,7 @@
     tools:context=".Activities.MainActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
